# Movies

./: =4.2.0  README.md  requirements.txt
Data_visualization/: Movie_Dataviz.ipynb
Data_visualization/output/: links_enriched.parquet  movies_by_year.parquet  ratings.parquet  tags_by_genre.parquet  tags_compare.parquet  tags_compare_good_bad.parquet  tags_good_ratings.parquet  top_movies_by_ratings.parquet
Streamlit/: get_movie_poster.py  page0.py  page1.py  page2.py  page3.py  utils.py
app/: Dataviz.py  Dockerfile  Fonctions.py  Movie_Dataviz.ipynb  database.py  fastapi_app.py  models.py  requirements.txt  tesmodels.py  testfonctions.py
app/Package/: pyproject.toml
app/Package/Moviemanagement/: README.md  pyproject.toml
app/Package/Moviemanagement/moviemanagement.egg-info/: PKG-INFO
app/Package/Moviemanagement/src/moviemanagement/: __init__.py  movie_client.py  movie_config.py
app/Package/Moviemanagement/src/moviemanagement.egg-info/: PKG-INFO
app/Package/Moviemanagement/src/moviemanagement/schemas/: schemas.py
app/__pycache__/: Movie_Dataviz.ipynb
app/__pycache__/output/: genre_df.parquet  tags_compare.parquet  user_tag_stats.parquet
